k8s/statefulset.yaml
#@ load("@ytt:data", "data")

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  serviceName: mssql
  template:
    metadata:
      labels:
        app: mssql
        app-tier: db
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql
        image: #@ data.values.todosApp.mssql_image
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql
          mountPath: /var/opt/mssql
        resources:
          requests:
            memory: 1G
            cpu: "1"
          limits:
            memory: 2G
            cpu: "1"
  volumeClaimTemplates:
    - metadata:
        name: mssql
        annotations:
          kapp.k14s.io/owned-for-deletion: ""
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: #@ 'ClusterIP' if not(hasattr(data.values,"mssql") and hasattr(data.values.mssql,"service") and hasattr(data.values.mssql.service,"type")) else data.values.mssql.service.type
