k8s/deployment.yaml
#! variables that need to be externally configurable
#! are specified in a data values file

#@ load("@ytt:data", "data")

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos
spec:
  replicas: 1
  selector:
     matchLabels:
       app: todos
  template:
    metadata:
      labels:
        app: todos
        app-tier: web-app
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
    spec:
      containers:
      - name: todos
        image: #@ data.values.todosApp.containerImage
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 1G
            cpu: "1"
          limits:
            memory: 2G
            cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: todos
spec:
  selector:
    app: todos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos
  labels:
    app: todos
spec:
  rules:
  - host: #@ data.values.todosApp.ingressUrl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todos
            port:
              number: 80
